Prevent page overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -13,7 +13,11 @@ body {
   background: var(--color-primary);
   font-family: var(--font-family-base);
   overflow: hidden;
+}
+
+.page {
+  position: relative;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
 }
-
